# cnc_interface

./: .gitignore  LICENCE.txt  pyproject.toml  run.sh
cnc_interface/: __main__.py  gui.py  machine.py  main.py
